--- a/ClientApp/src/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/src/app/components/navmenu/navmenu.component.html
@@ -1,28 +1,45 @@
-<div class='main-nav'>
-  <div class='navbar navbar-inverse'>
-    <div class='navbar-header'>
-      <button type='button'
-              class='navbar-toggle'
-              data-toggle='collapse'
-              data-target='.navbar-collapse'>
-        <span class='sr-only'>Toggle navigation</span>
-        <span class='icon-bar'></span>
-        <span class='icon-bar'></span>
-        <span class='icon-bar'></span>
-      </button>
-      <a class='navbar-brand'
-         [routerLink]="['/home']">Vega</a>
-    </div>
-    <div class='clearfix'></div>
-    <div class='navbar-collapse collapse'>
-      <ul class='nav navbar-nav'>
-        <li [routerLinkActive]="['link-active']">
-          <a [routerLink]="['/home']">
-            <span class='glyphicon glyphicon-home'></span> Home
-          </a>
-        </li>
-
-      </ul>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand"
+     href="#">Navbar</a>
+  <button class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse"
+       id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link"
+           [routerLink]="['/home']">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"
+           href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"
+           href="#">Pricing</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle"
+           href="#"
+           id="navbarDropdownMenuLink"
+           data-toggle="dropdown"
+           aria-haspopup="true"
+           aria-expanded="false">
+          Dropdown link
+        </a>
+        <div class="dropdown-menu"
+             aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item"
+             [routerLink]="['vehicle/new']">New Vehicle</a>
+        </div>
+      </li>
+    </ul>
   </div>
-</div>
+</nav>
