--- a/ClientApp/src/app/components/form-vehicle/form-vehicle.component.html
+++ b/ClientApp/src/app/components/form-vehicle/form-vehicle.component.html
@@ -22,4 +22,13 @@
               value="{{m.id}}">{{m.name}}</option>
     </select>
   </div>
+
+  <h2>Features</h2>
+  <div *ngFor="let f of features"
+       class="checkbox">
+    <label for="feature{{f.id}}">
+      <input type="checkbox"
+             id="feature{{f.id}}">{{f.name}}
+    </label>
+  </div>
 </form>
