--- a/ClientApp/src/app/components/form-vehicle/form-vehicle.component.html
+++ b/ClientApp/src/app/components/form-vehicle/form-vehicle.component.html
@@ -49,7 +49,8 @@
        class="checkbox">
     <label for="feature{{f.id}}">
       <input type="checkbox"
-             id="feature{{f.id}}">{{f.name}}
+             id="feature{{f.id}}"
+             (change)="onFeatureToggle(f.id, $event)">{{f.name}}
     </label>
   </div>
 
