Submit the form.

--- a/ClientApp/src/app/components/form-vehicle/form-vehicle.component.html
+++ b/ClientApp/src/app/components/form-vehicle/form-vehicle.component.html
@@ -1,6 +1,6 @@
 <h1>New Vehicle</h1>
 <p>{{ vehicle | json }}</p>
-<form>
+<form (ngSubmit)="submit()">
   <div class="form-group">
     <label for="make">Make</label>
     <select id="make"
