--- a/ClientApp/src/app/components/form-vehicle/form-vehicle.component.html
+++ b/ClientApp/src/app/components/form-vehicle/form-vehicle.component.html
@@ -1,17 +1,22 @@
 <h1>New Vehicle</h1>
 <p>{{ vehicle | json }}</p>
-<form (ngSubmit)="submit()">
+<form #f="ngForm"
+      (ngSubmit)="submit()">
   <div class="form-group">
     <label for="make">Make</label>
     <select id="make"
             class="form-control"
             (change)="onMakeChanges()"
             [(ngModel)]="vehicle.makeId"
-            name="makeId">
+            name="makeId"
+            required
+            #make="ngModel">
       <option value=""></option>
       <option *ngFor="let m of makes"
               value="{{m.id}}">{{m.name}}</option>
     </select>
+    <div class="alert alert-danger"
+         *ngIf="make.touched && !make.valid">Please specify the make.</div>
 
   </div>
   <div class="form-group">
@@ -79,5 +84,6 @@
            [(ngModel)]="vehicle.contact.email"
            name="contactEmail">
   </div>
-  <button class="btn btn-primary">Save</button>
+  <button class="btn btn-primary"
+          [disabled]="!f.valid">Save</button>
 </form>
