--- a/ClientApp/src/app/components/form-vehicle/form-vehicle.component.html
+++ b/ClientApp/src/app/components/form-vehicle/form-vehicle.component.html
@@ -87,4 +87,9 @@
   </div>
   <button class="btn btn-primary"
           [disabled]="!f.valid">Save</button>
+
+  <button *ngIf="vehicle.id"
+          class="btn btn-danger"
+          type="button"
+          (click)="delete()">Delete</button>
 </form>
