--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -1,2 +1,3 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
+@import '../node_modules/ngx-toasta/styles/style-bootstrap.css'
