--- a/ClientApp/src/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/src/app/components/navmenu/navmenu.component.html
@@ -15,7 +15,7 @@
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link"
-           [routerLink]="['/home']">Home <span class="sr-only">(current)</span></a>
+           [routerLink]="['/vehicles']">Vehicles <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link"
