--- a/ClientApp/src/app/components/vehicle-list/vehicle-list.component.html
+++ b/ClientApp/src/app/components/vehicle-list/vehicle-list.component.html
@@ -24,10 +24,10 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Id</th>
-      <th>Make</th>
-      <th>Model</th>
-      <th>Contact Name</th>
+      <th (click)="sortBy('id')">Id</th>
+      <th (click)="sortBy('make')">Make</th>
+      <th (click)="sortBy('model')">Model</th>
+      <th (click)="sortBy('contactName')">Contact Name</th>
       <th></th>
     </tr>
   </thead>
