Render columns dynamically.

--- a/ClientApp/src/app/components/vehicle-list/vehicle-list.component.html
+++ b/ClientApp/src/app/components/vehicle-list/vehicle-list.component.html
@@ -24,7 +24,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th (click)="sortBy('id')">Id</th>
+      <!-- <th (click)="sortBy('id')">Id</th>
       <th (click)="sortBy('make')">
         Make
         <i *ngIf="filter.sortBy === 'make'"
@@ -34,7 +34,20 @@
       </th>
       <th (click)="sortBy('model')">Model</th>
       <th (click)="sortBy('contactName')">Contact Name</th>
-      <th></th>
+      <th></th> -->
+      <th *ngFor="let c of columns">
+        <div *ngIf="c.isSortable"
+             (click)="sortBy(c.key)">
+          {{c.title}}
+          <i *ngIf="filter.sortBy === c.key"
+             class="fa"
+             [class.fa-sort-asc]="filter.isSortAscending"
+             [class.fa-sort-desc]="!filter.isSortAscending"></i>
+        </div>
+        <div *ngIf="!c.isSortable">
+          {{c.title}}
+        </div>
+      </th>
     </tr>
   </thead>
   <tbody>
